View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023103 | Open CASCADE | OCCT:Modeling Algorithms | public | 2012-04-12 15:51 | 2012-11-16 13:16 |
Reporter | Assigned To | ||||
Priority | none | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.2 | ||||
Target Version | 6.5.4 | Fixed in Version | 6.5.4 | ||
Summary | 0023103: Regression in bsection | ||||
Description | There is a regression in bsection. The result compound of test cin/001/E5 on OCCT652 is normal. The result compound of the same test on current version of OCCT is wrong. | ||||
Steps To Reproduce | Vide cin/001/E5 | ||||
Additional information and documentation updates | I. New features: no New features II. Changes: II.1. class :IntTools_FaceFace - method: void void IntTools_FaceFace::ComputeTolReached3d() The boundary points of intersection curve (that do not belong to the faces) have been removed from the set of checking points. II. Modified entities: packages: IntTools | ||||
Tags | No tags attached. | ||||
Test case number | cin 001 E5 | ||||
|
The branch CR23103 is ready to be reviewed. |
|
Reviewed, please test |
|
Dear BugMaster, Workbench KAS:dev:mkv-23103-occt was created from git branch CR23103 (and mkv-23103-products from svn trunk) and compiled on Linux platform. There are not regressions in mkv-23103-products regarding to KAS:dev:products-20120415-opt There are not improvements in mkv-23103-products regarding to KAS:dev:products-20120415-opt Test case for this fix is cin 001 E5. It's OK. See results in /QADisk/occttests/results/KAS/dev/mkv-23103-products_02052012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120415-opt_13042012/lin See test cases in /QADisk/occttests/tests/ED |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-04-12 15:51 |
|
New Issue | |
2012-04-12 15:51 |
|
Assigned To | => pkv |
2012-04-20 08:14 |
|
Status | new => resolved |
2012-04-20 08:14 |
|
Steps to Reproduce Updated | |
2012-04-20 08:14 |
|
Additional Information Updated | |
2012-04-20 08:15 |
|
Note Added: 0020419 | |
2012-04-20 08:15 |
|
Assigned To | pkv => ifv |
2012-04-28 13:46 |
|
Assigned To | ifv => abv |
2012-04-28 15:47 |
|
Note Added: 0020452 | |
2012-04-28 15:47 |
|
Assigned To | abv => pkv |
2012-04-28 15:47 |
|
Status | resolved => reviewed |
2012-05-02 09:49 | apn | Assigned To | pkv => apn |
2012-05-03 09:53 | apn | Note Added: 0020462 | |
2012-05-03 09:54 | apn | Test case number | => cin 001 E5 |
2012-05-03 09:54 | apn | Assigned To | apn => bugmaster |
2012-05-03 09:54 | apn | Status | reviewed => tested |
2012-05-10 15:35 |
|
Changeset attached | => occt master 8e0115e4 |
2012-05-10 15:35 |
|
Assigned To | bugmaster => pkv |
2012-05-10 15:35 |
|
Status | tested => verified |
2012-05-10 15:35 |
|
Resolution | open => fixed |
2012-05-10 15:43 | bugmaster | Target Version | => 6.5.4 |
2012-11-16 13:15 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:16 | bugmaster | Status | verified => closed |