0023103: Regression in bsection